--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="inputForm">
+  <label for="firstName">First Name:</label>
+  <input type="text" id="firstName" name="firstName"><br>
+  <label for="lastName">Last Name:</label>
+  <input type="text" id="lastName" name="lastName"><br>
+  <label for="phoneNumber">Phone Number:</label>
+  <input type="text" id="phoneNumber" name="phoneNumber"><br>
+  <label for="email">Email ID:</label>
+  <input type="text" id="email" name="email"><br>
+  <button type="submit">Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
